fixed scrolling bug on ios

--- a/hogwarts-legacy/src/index.css
+++ b/hogwarts-legacy/src/index.css
@@ -60,12 +60,30 @@ body {
   font-family: 'Bebas Neue', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/hogwarts1.jpg);
+  /* background-image: url(./images/hogwarts1.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
+  min-height: 100vh; */
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background-image: url(./images/hogwarts1.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 header
@@ -343,6 +361,14 @@ aside
     width: 90%;
   }
 }
+
+@media (max-width: 767px)
+{
+  /* body{
+    background-size: 100% 100vh
+  } */
+}
+
 @media (max-width: 600px)
 {
   .links
